// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an event view component with all props 1`] = `
<div
  className="ui container view-wrapper event-view"
  id="page-document"
>
  <div
    className="ui grid"
  >
    <div
      className="seven wide column mobile hidden"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
      <p
        className="documentDescription"
      >
        Hi
      </p>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Hello World!</p>",
          }
        }
      />
    </div>
    <div
      className="five wide column mobile hidden"
    >
      <aside
        className="ui right floated segment"
      >
        <div
          className="ui dividing sub header"
        >
          What
        </div>
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Guillotina
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Volto
          </div>
        </div>
        <div
          className="ui dividing sub header"
        >
          When
        </div>
        <p
          className="event-when"
        >
          <span
            className="start"
          >
            <span
              className="start-date"
            >
              Jun 23, 2019
            </span>
            <span>
               
            </span>
            <span
              className="start-time"
            >
              3:20 PM
            </span>
          </span>
           to 
          <span
            className="end"
          >
            <span
              className="end-date"
            >
              Jun 24, 2019
            </span>
            <span>
               
            </span>
            <span
              className="end-time"
            >
              3:20 PM
            </span>
          </span>
        </p>
        <div
          className="ui dividing sub header"
        >
          All dates
        </div>
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Jun 23, 2019
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Jun 30, 2019
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Jul 7, 2019
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Jul 14, 2019
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Jul 21, 2019
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Jul 28, 2019
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Aug 4, 2019
          </div>
        </div>
        <div
          className="ui dividing sub header"
        >
          Where
        </div>
        <p>
          Volto, Plone
        </p>
        <div
          className="ui dividing sub header"
        >
          Contact Name
        </div>
        <p>
          <a
            href="mailto:test@example.com"
          >
            John Doe
          </a>
        </p>
        <div
          className="ui dividing sub header"
        >
          Contact Phone
        </div>
        <p>
          0123456789
        </p>
        <div
          className="ui dividing sub header"
        >
          Attendees
        </div>
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            John Doe
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Mario Rossi
          </div>
        </div>
        <div
          className="ui dividing sub header"
        >
          Website
        </div>
        <p>
          <a
            href="https://www.example.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Visit external website
          </a>
        </p>
        <div
          className="download-event"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "36px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          <a
            className="ics-download"
            href="http://localhost:8080/Plone/++api++/my-page/ics_view"
            rel="noreferrer"
            target="_blank"
          >
            Download Event
          </a>
        </div>
      </aside>
    </div>
    <div
      className="mobile only twelve wide column"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
      <p
        className="documentDescription"
      >
        Hi
      </p>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Hello World!</p>",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`renders an event view component with only required props 1`] = `
<div
  className="ui container view-wrapper event-view"
  id="page-document"
>
  <div
    className="ui grid"
  >
    <div
      className="seven wide column mobile hidden"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
    </div>
    <div
      className="five wide column mobile hidden"
    >
      <aside
        className="ui right floated segment"
      >
        <div
          className="ui dividing sub header"
        >
          When
        </div>
        <p
          className="event-when same-day"
        >
          <span
            className="start-date"
          >
            Jun 23, 2019
          </span>
           from 
          <span
            className="start-time"
          >
            3:20 PM
          </span>
           to 
          <span
            className="end-time"
          >
            4:20 PM
          </span>
        </p>
        <div
          className="download-event"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "36px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          <a
            className="ics-download"
            href="http://localhost:8080/Plone/++api++/my-page/ics_view"
            rel="noreferrer"
            target="_blank"
          >
            Download Event
          </a>
        </div>
      </aside>
    </div>
    <div
      className="mobile only twelve wide column"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
    </div>
  </div>
</div>
`;

exports[`renders an event view component without links to api in the text 1`] = `
<div
  className="ui container view-wrapper event-view"
  id="page-document"
>
  <div
    className="ui grid"
  >
    <div
      className="seven wide column mobile hidden"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Hello World!</p><p>This is an <a href=\\"/foo/bar\\">internal link</a> and a <a href=\\"/foo/baz\\">second link</a></p>",
          }
        }
      />
    </div>
    <div
      className="five wide column mobile hidden"
    >
      <aside
        className="ui right floated segment"
      >
        <div
          className="ui dividing sub header"
        >
          When
        </div>
        <p
          className="event-when same-day"
        >
          <span
            className="start-date"
          >
            Jun 23, 2019
          </span>
           from 
          <span
            className="start-time"
          >
            3:20 PM
          </span>
           to 
          <span
            className="end-time"
          >
            4:20 PM
          </span>
        </p>
        <div
          className="download-event"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "36px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          <a
            className="ics-download"
            href="http://localhost:8080/Plone/++api++/my-page/ics_view"
            rel="noreferrer"
            target="_blank"
          >
            Download Event
          </a>
        </div>
      </aside>
    </div>
    <div
      className="mobile only twelve wide column"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Hello World!</p><p>This is an <a href=\\"/foo/bar\\">internal link</a> and a <a href=\\"/foo/baz\\">second link</a></p>",
          }
        }
      />
    </div>
  </div>
</div>
`;
